--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --cor-principal: #027581;     
+    --cor-secundaria: #e74c3c;   
+    --cor-destaque: #F1C40F;     
+    --cor-fundo: #f5f5dc;        
+    --cor-texto: #4a4a4a;        
+    --cor-texto-claro: #ffffff;   
+    --fonte-principal: 'Nunito', sans-serif;
+}
+
+body {
+    font-family: var(--fonte-principal);
+    color: var(--cor-texto);
+    background-color: var(--cor-fundo);
+    overflow-x: hidden;
+}
