--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -37,11 +37,13 @@
         </div>
       </div>
 
-      <button type="button" class="hamburger-menu" (click)="toggleMenu()" [class.active]="isMenuOpen" aria-label="Abrir ou fechar menu">
+      <div class="hamburger-menu" (click)="toggleMenu()" [class.active]="isMenuOpen" aria-label="Abrir ou fechar menu">
         <span></span>
         <span></span>
         <span></span>
-      </button>
+      </div>
     </div>
   </nav>
 </header>
+
+<div class="header-placeholder"></div>
