ajustes de estilos

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -38,7 +38,7 @@ footer {
 
     &:hover {
       opacity: 1;
-      color: var(--cor-primaria);
+      color: var(--cor-secundaria);
       padding-left: 5px;
     }
   }
