--- a/src/app/components/projects/projects-list/projects-list.html
+++ b/src/app/components/projects/projects-list/projects-list.html
@@ -1,9 +1,9 @@
 <div class="container">
 
-  <div class="page-header">
-    <h1>Nossos Projetos</h1>
+  <div class="component-header">
+    <h1 class="abrace-title">Nossos Projetos</h1>
     @if (authService.isLoggedIn()) {
-    <a routerLink="/admin/project/new" class="btn btn-success btn-add-project">
+    <a routerLink="/admin/project/new" class="btn btn-success btn-add">
       + Adicionar Novo Projeto
     </a>
     }
@@ -45,15 +45,19 @@
       </div>
     </div>
   </div>
+
   @if (loading) {
   <div class="row">
     @for (item of [1, 2, 3, 4]; track item) {
-    <div class="col-md-6 col-lg-3 mb-4">
+    <div class="col-md-6 col-lg-3 mb-4 loading">
       <div class="card h-100 shadow-sm">
         <div class="skeleton skeleton-image"></div>
         <div class="card-body">
           <div class="skeleton skeleton-title"></div>
           <div class="skeleton skeleton-text"></div>
+        </div>
+        <div class="card-footer bg-white border-0">
+          <div class="skeleton skeleton-button"></div>
         </div>
       </div>
     </div>
@@ -63,7 +67,7 @@
   <div class="row">
     @for (project of projects; track project.id) {
     <div class="col-md-6 col-lg-3 mb-4">
-      <div class="card h-100 shadow-sm project-card clickable-card" (click)="showDetails(project.id)"
+      <div class="card h-100 shadow-sm component-cards" (click)="showDetails(project.id)"
         [class.inactive-card]="!project.status">
         <img [src]="project.image_url || 'assets/images/placeholder.png'" class="card-img-top" alt="{{ project.name }}">
         <div class="card-body d-flex flex-column">
