--- a/src/app/components/posts/posts-list/posts-list.html
+++ b/src/app/components/posts/posts-list/posts-list.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="component-header">
-    <h1>Blog</h1>
+    <h1>Postagens</h1>
     @if (authService.isLoggedIn()) {
     <a routerLink="/admin/post/new" class="btn btn-success btn-add">
       + Adicionar Nova Postagem
