--- a/src/app/pages/como-atuamos/como-atuamos.html
+++ b/src/app/pages/como-atuamos/como-atuamos.html
@@ -4,7 +4,7 @@
     <div class="container">
       <h1 class="abrace-title">Como Atuamos</h1>
       <p class="lead text-muted">
-        Nossa missão é prestar suporte em situações emergenciais e trabalhar a resiliência de comunidades afetadas por catástrofes, levando amparo e esperança a quem mais precisa.
+        Prestar suporte, trabalhar a resiliência de comunidades afetadas e levar esperança a quem mais precisa.
       </p>
     </div>
   </section>
@@ -71,7 +71,7 @@
     </div>
   </section>
 
-  <section class="cta-projects-section text-center">
+  <section class="cta-section text-center">
     <div class="container">
       <h2 class="cta-title">Conheça nossas Iniciativas</h2>
       <p class="cta-text">Abaixo você pode conferir os projetos atuais, futuros e já finalizados do instituto. Cada um deles é a materialização da nossa missão e do nosso processo de atuação.</p>
