--- a/src/app/pages/quem-somos/quem-somos.html
+++ b/src/app/pages/quem-somos/quem-somos.html
@@ -3,7 +3,7 @@
   <section class="abrace-intro text-center">
     <div class="container">
       <h1 class="abrace-title">Nossa História</h1>
-      <p class="lead text-muted">Nascemos da solidariedade em meio ao caos, com um propósito: o povo pelo povo. Nascemos da solidariedade em meio ao caos, com um propósito: o povo pelo povo. Nascemos da solidariedade em meio ao caos, com um propósito: o povo pelo povo.</p>
+      <p class="lead text-muted">Nascemos da solidariedade em meio ao caos, com um propósito: o povo pelo povo.</p>
     </div>
   </section>
 
