--- a/src/app/pages/como-atuamos/como-atuamos.scss
+++ b/src/app/pages/como-atuamos/como-atuamos.scss
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: space-between;
   position: relative;
-  
+
   &::before {
-    content: '';
+    content: "";
     position: absolute;
-    top: 25px; 
+    top: 25px;
     left: 10%;
     right: 10%;
     height: 3px;
@@ -52,24 +52,6 @@
   }
 }
 
-.cta-projects-section {
-  padding: 2rem 0 1rem;
-  background-color: var(--cor-texto);
-  color: var(--cor-fundo);
-}
-
-.cta-title {
-  color: #fff;
-  font-weight: 800;
-}
-
-.cta-text {
-  font-size: 1.1rem;
-  max-width: 800px;
-  margin: 1rem auto 0 auto;
-  opacity: 0.9;
-}
-
 @media (max-width: 768px) {
   .process-timeline {
     flex-direction: column;
@@ -99,27 +81,5 @@
     .timeline-icon {
       margin: 0 1.5rem 0 0;
     }
-  }
-}
-
-.arrow-indicator {
-  margin-top: 1.5rem;
-  font-size: 2rem;
-  color: var(--cor-destaque); 
-  
-  i {
-    animation: bounce 2.5s infinite;
-  }
-}
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-20px);
-  }
-  60% {
-    transform: translateY(-10px);
   }
 }
