--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,6 +112,54 @@ body {
 }
 
 /*
+  Call to Action
+*/
+
+.cta-section {
+  padding: 2rem 0 1rem;
+  background-color: var(--cor-texto);
+  color: var(--cor-fundo);
+
+  .cta-title {
+    color: #fff;
+    font-weight: 800;
+  }
+
+  .cta-text {
+    font-size: 1.1rem;
+    max-width: 800px;
+    margin: 1rem auto 0 auto;
+    opacity: 0.9;
+  }
+
+  .arrow-indicator {
+    margin-top: 1.5rem;
+    font-size: 2rem;
+    color: var(--cor-destaque);
+
+    i {
+      animation: bounce 2.5s infinite;
+    }
+  }
+
+  @keyframes bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-20px);
+    }
+    60% {
+      transform: translateY(-10px);
+    }
+  }
+}
+
+/*
   Cards de componentes
 */
 
@@ -238,7 +286,7 @@ body {
     height: 31px;
     margin-left: auto;
   }
-  
+
   @keyframes pulse {
     0% {
       opacity: 1;
