Ajustes para a Home

--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -43,7 +43,7 @@
 
   <section class="cta-section text-center">
     <div class="container">
-      <h2 class="cta-title">Confira nossas Postagens</h2>
+      <h2 class="cta-title">Confira nossas Notícias</h2>
       <p class="cta-text">Abaixo você pode conferir notícias, histórias e atualizações quanto ao nosso trabalho.</p>
 
       <div class="arrow-indicator">
